429 too many requestエラーが発生した場合にメッセージを表示する

--- a/styles/PrefecturesPopulation.module.css
+++ b/styles/PrefecturesPopulation.module.css
@@ -17,3 +17,9 @@
   font-size: 1rem /* 16px */;
   color: rgba(55, 65, 81, 1);
 }
+
+.tooManyRequest {
+  color: rgba(248, 113, 113, 1);
+  text-align: center;
+  font-size: 1rem /* 16px */;
+}
